--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="googlebot" content="index, follow">
-<title>Cookie Clicker - Play Free Now! Original Clicker Game</title>
+<title>Cookie Clicker - Play Free Now!</title>
 <meta name="title" content="Cookie Clicker - Play Free Now! Original Clicker Game">
 <meta name="description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide. Start clicking now!">
 <meta name="keywords" content="cookie clicker, incremental game, idle game, clicker game, browser game, free game, cookie game, clicking game, orteil, unblocked game">
