--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
 <title>Cookie Clicker - Play Free Now!</title>
 <meta name="title" content="Cookie Clicker - Play Free Now! Original Clicker Game">
 <meta name="description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide. Start clicking now!">
-<meta name="keywords" content="cookie clicker, incremental game, idle game, clicker game, browser game, free game, cookie game, clicking game, orteil, unblocked game">
-<meta name="author" content="Orteil">
 <meta name="theme-color" content="#1a1a1a">
 <link rel="canonical" href="https://cookieclicker-1.github.io/">
-<meta name="language" content="English">
-<meta name="geo.region" content="US">
-<meta name="geo.placename" content="United States">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://cookieclicker-1.github.io/">
 <meta property="og:title" content="Cookie Clicker - Play Free Now! Original Clicker Game">
@@ -30,8 +25,8 @@
 <meta property="twitter:description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide.">
 <meta property="twitter:image" content="https://cookieclicker-1.github.io/cookie-clicker.png">
 <meta property="twitter:creator" content="@orteil42">
-<link rel="preload" href="style.css?v=9" as="style">
-<link rel="preload" href="main.js?v=10" as="script">
+<link rel="preload" href="style.css" as="style">
+<link rel="preload" href="main.js" as="script">
 <link rel="preload" href="base64.js" as="script">
 <link rel="preload" href="https://fonts.googleapis.com/css?family=Merriweather:900&subset=latin,latin-ext" as="style">
 <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
@@ -51,10 +46,6 @@
 <!--<link href="https://fonts.googleapis.com/css?family=Kavoon&subset=latin,latin-ext" rel="stylesheet" type="text/css">-->
 <link href='https://fonts.googleapis.com/css?family=Merriweather:900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <!-- /external -->
-<!--
-Code and graphics copyright Orteil, 2013-2023
-Feel free to alter this code to your liking, but please do not re-host it, do not profit from it and do not present it as your own.
--->
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
