--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-<meta name="googlebot" content="index, follow">
 <title>Cookie Clicker - Play Free Now!</title>
-<meta name="title" content="Cookie Clicker - Play Free Now! Original Clicker Game">
+<meta name="title" content="Cookie Clicker - Play Free Now!">
 <meta name="description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide. Start clicking now!">
 <meta name="theme-color" content="#1a1a1a">
 <link rel="canonical" href="https://cookieclicker-1.github.io/">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://cookieclicker-1.github.io/">
-<meta property="og:title" content="Cookie Clicker - Play Free Now! Original Clicker Game">
+<meta property="og:title" content="Cookie Clicker - Play Free Now!">
 <meta property="og:description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide.">
 <meta property="og:image" content="https://cookieclicker-1.github.io/cookie-clicker.png">
 <meta property="og:image:width" content="1200">
@@ -21,10 +19,9 @@
 <meta property="og:locale" content="en_US">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://cookieclicker-1.github.io/">
-<meta property="twitter:title" content="Cookie Clicker - Play Free Now! Original Clicker Game">
+<meta property="twitter:title" content="Cookie Clicker - Play Free Now!">
 <meta property="twitter:description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide.">
 <meta property="twitter:image" content="https://cookieclicker-1.github.io/cookie-clicker.png">
-<meta property="twitter:creator" content="@orteil42">
 <link rel="preload" href="style.css" as="style">
 <link rel="preload" href="main.js" as="script">
 <link rel="preload" href="base64.js" as="script">
@@ -38,14 +35,11 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Is Cookie Clicker free to play?","acceptedAnswer":{"@type":"Answer","text":"Yes! Cookie Clicker is completely free to play in your web browser. No downloads, registrations, or payments required."}},{"@type":"Question","name":"Can I play Cookie Clicker unblocked at school?","acceptedAnswer":{"@type":"Answer","text":"Cookie Clicker runs in any web browser and doesn't require special permissions, making it accessible in most environments."}},{"@type":"Question","name":"How do I get sugar lumps in Cookie Clicker?","acceptedAnswer":{"@type":"Answer","text":"Sugar lumps grow automatically over time (about 1 per day) and can be harvested to upgrade buildings or unlock mini-games."}}]}
 </script>
-<!-- external -->
 <script type="text/javascript">
     window.cookieconsent_options = {"message":"Unsurprisingly, this website uses cookies for ads and traffic analysis.","dismiss":"Got it!","learnMore":"Learn more","link":"//orteil.dashnet.org/cookieconsentpolicy.html","target":"_blank","theme":"//orteil.dashnet.org/cookieconsent.css","domain":"dashnet.org"};
 </script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
-<!--<link href="https://fonts.googleapis.com/css?family=Kavoon&subset=latin,latin-ext" rel="stylesheet" type="text/css">-->
 <link href='https://fonts.googleapis.com/css?family=Merriweather:900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-<!-- /external -->
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -58,13 +52,11 @@ var VERSION=2.052;
 var BETA=0;
 var App=typeof App==='undefined'?0:App;
 </script>
-
 <link href="style.css?v=9" rel="stylesheet" type="text/css">
 <style>
     html, body{margin: 0;padding: 0;height: auto;overflow-x: hidden;overflow-y: auto}#wrapper{position: relative}#game{position: relative;height: 100vh}#seo-content{background: #1a1a1a;color: #f5f5f5;padding: 2rem;font-family: 'Merriweather', Georgia, serif;line-height: 1.6}.container{max-width: 1200px;margin: 0 auto;padding: 0 2rem}#seo-content h1, #seo-content h2, #seo-content h3, #seo-content h4, #seo-content h5, #seo-content h6{color: #ffb74d;margin-top: 1.5em;margin-bottom: 0.5em}#seo-content h1{font-size: 2.5em;border-bottom: 2px solid #444;padding-bottom: 0.5em}#seo-content h2{font-size: 2em}#seo-content h3{font-size: 1.75em}#seo-content h4{font-size: 1.5em}#seo-content h5{font-size: 1.25em}#seo-content h6{font-size: 1em}#seo-content p{margin-bottom: 1em}#seo-content ul, #seo-content ol{margin-left: 2em;margin-bottom: 1.5em}#seo-content li{margin-bottom: 0.5em}#seo-content a{color: #4fc3f7;text-decoration: none}#seo-content a:hover{text-decoration: underline}.highlight-box{background: rgba(255, 255, 255, 0.1);border-left: 4px solid #ffb74d;padding: 1em;margin: 1.5em 0;border-radius: 0 4px 4px 0}.cookie-fact{font-style: italic;color: #aed581}*{box-sizing: border-box}img{max-width: 100%;height: auto}#topBar{will-change: transform}#bigCookie{will-change: transform}
 </style>
-<script src="main.js?v=10"></script>
-
+<script src="main.js"></script>
 <!--[if IE]>
 <style type="text/css">
 	#ifIE9{display:block;}
