--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ var App=typeof App==='undefined'?0:App;
 				<p><strong>Cookie Clicker</strong> is the original and most popular incremental clicker game that started the entire idle gaming genre. Play Cookie Clicker unblocked for free in your browser and join millions of players baking virtual cookies worldwide. No downloads required - start clicking cookies now!</p>
 			</div>
 			<h2>What is Cookie Clicker?</h2>
-			<p>Cookie Clicker is a free browser-based incremental game where players click on a giant cookie to produce cookies. Created by Orteil in 2013, Cookie Clicker revolutionized idle gaming by introducing the addictive "one more click" gameplay that has influenced countless other games. The objective is simple: click the cookie, buy upgrades, and automate your cookie production to reach astronomical numbers.</p>
+			<p><a href="https://cookieclickerfree.io/">Cookie Clicker</a> is a free browser-based incremental game where players click on a giant cookie to produce cookies. Created by Orteil in 2013, Cookie Clicker revolutionized idle gaming by introducing the addictive "one more click" gameplay that has influenced countless other games. The objective is simple: click the cookie, buy upgrades, and automate your cookie production to reach astronomical numbers.</p>
 			<h2>How to Play Cookie Clicker - Complete Beginner's Guide</h2>
 			<p>Playing Cookie Clicker is easy to learn but challenging to master:</p>
 			<ol>
@@ -293,3 +293,4 @@ var App=typeof App==='undefined'?0:App;
 </div>
 </body>
 </html>
+
