--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="title" content="Cookie Clicker - Play Free Now!">
 <meta name="description" content="Play Cookie Clicker, the original incremental clicker game! Click cookies, buy upgrades, and build your empire. Free browser game with millions of players worldwide. Start clicking now!">
 <meta name="theme-color" content="#1a1a1a">
-<link rel="canonical" href="https://cookieclicker-1.github.io/">
+<link rel="canonical" href="https://cookieclickers.io/">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://cookieclicker-1.github.io/">
 <meta property="og:title" content="Cookie Clicker - Play Free Now!">
@@ -293,4 +293,5 @@ var App=typeof App==='undefined'?0:App;
 </div>
 </body>
 </html>
+
 
